--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,19 @@
-img {
-    width: 50px;
-    height: 50px;
+main {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    min-width: 981px;
+}
+
+.record {
+    width: 300px;
+    height: 250px;
+    border: 1px solid black;
+}
+
+.card {
+    width: 10rem;
 }
