--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,48 @@
-main {
+* {
+    padding: 0;
+    font-family: "Prompt";
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.main-container {
+    width: 100%;
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    position: fixed !important;
+    display: flex;
+    flex-direction: column;
+}
+
+.records {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    min-width: 981px;
+    height: 450px;
 }
 
 .record {
     width: 300px;
-    height: 250px;
+    height: 350px;
     border: 1px solid black;
 }
 
 .card {
     width: 10rem;
+}
+
+.form-records {
+    height: 100vh;
+}
+
+.navbar-header {
+    float: left;
+    padding: 15px;
+    text-align: center;
+    width: 100%;
+}
+
+.navbar-brand {
+    float: none;
 }
