--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@
     margin: 0;
 }
 
+.navbar-header {
+    float: left;
+    padding: 15px;
+    text-align: center;
+    width: 100%;
+}
+
 .main-container {
     width: 100%;
     min-height: 100vh;
@@ -13,6 +20,8 @@
     position: fixed !important;
     display: flex;
     flex-direction: column;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(75, 37, 37, 1) 100%);
 }
 
 .records {
@@ -22,27 +31,32 @@
     height: 450px;
 }
 
-.record {
-    width: 300px;
-    height: 350px;
-    border: 1px solid black;
-}
-
 .card {
     width: 10rem;
+    background-color: transparent !important;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-.form-records {
-    height: 100vh;
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
 }
 
-.navbar-header {
-    float: left;
-    padding: 15px;
-    text-align: center;
-    width: 100%;
+.form-label {
+    color: white;
 }
 
-.navbar-brand {
-    float: none;
+input[type="time"]::-webkit-calendar-picker-indicator {
+    filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+}
+
+.spin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.alert {
+    color: white;
 }
