falta arreglar babel con async await

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,11 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
 }
 
+.trash-icon:hover {
+    transform: scale(2.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+}
+
 .form-label {
     color: white;
 }
@@ -59,4 +64,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 
 .alert {
     color: white;
+}
+
+::-webkit-calendar-picker-indicator {
+    filter: invert(1);
 }
